# mediawiki-ainu-i18n

./: Names.php  README.md  TRANSLATING.md  TRANSLATION-GUIDANCE.md  TRANSLATION-REVIEW.md  ain.json  convert.py  files.py  pull_and_upload.py  pyproject.toml  upload.py
.github/workflows/: deploy.yml
converter/: AinConverter.php  LanguageConverter.php  LanguageConverterFactory.php  metadata.yml
extensions/CiteThisPage/: CiteThisPage.alias.php  ain.json  metadata.yml
extensions/MobileFrontend/: ain.json
extensions/UniversalLanguageSelector/: ain.json  metadata.json  metadata.yml
extensions/UniversalLanguageSelector/api/: ain.json
extensions/UniversalLanguageSelector/jquery/: ain.json  jquery.uls.data.js
messages/: MessagesAin.php
skins/Vector/: ain.json  metadata.yml
