[tool.poetry]
name = "mediawiki-ainu-i18n"
version = "0.1.0"
description = ""
authors = ["mkpoli <git@mkpo.li>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
