[tool.poetry]
name = "mediawiki-ainu-i18n"
version = "0.1.0"
description = ""
authors = ["mkpoli <git@mkpo.li>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pyyaml = "^6.0.1"
ainconv = "0.3.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
tqdm = "^4.66.2"
regex = "^2023.12.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
